# search-expert

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/amazon/: data_generation.py  data_generation_sdk.py  evaluation.py
examples/: basic_usage.py  search_expert_colab.ipynb
examples/ecommerce/: build_db.py  ecommerce_hybrid_search.ipynb  products.py  search.py
search_expert/: __init__.py  config.py  exceptions.py  expert.py  loader.py  parser.py  result.py
tests/: __init__.py  test_search_expert.py
training/: evaluate.py  finetune.py  prompts.py
